nav section add

--- a/index.html
+++ b/index.html
@@ -24,16 +24,21 @@
 	</head>
 	<body class="inter-font">
 		<!-- header section -->
-		<header>
-			<nav>
-				<figure class=""></figure>
-				<div class=""></div>
-				<div class="">
+		<header class="container">
+			<nav class="nav content-area">
+				<figure>
+					<img class="nav-logo" src="./images/logo.png" alt="wed site logo" />
+				</figure>
+				<div class="nav-search">
+					<input class="search-input" type="text" placeholder="Search" />
+					<i class="fa-solid fa-magnifying-glass searc-icon"></i>
+				</div>
+				<div class="nav-list">
 					<ul>
-						<li>Home</li>
-						<li>Product</li>
-						<li>About Us</li>
-						<li>Contact Us</li>
+						<li><a href="#">Home</a></li>
+						<li><a href="#">Product</a></li>
+						<li><a href="#">About Us</a></li>
+						<li><a href="#">Contact Us</a></li>
 					</ul>
 				</div>
 			</nav>
