banner section add

--- a/index.html
+++ b/index.html
@@ -42,6 +42,26 @@
 					</ul>
 				</div>
 			</nav>
+			<!-- banner part -->
+			<div class="banner content-area">
+				<div class="banner-text">
+					<h1 class="banner-heading">Mi LED TV 4A PRO 32</h1>
+					<p class="banner-paragraph">
+						Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+						sint. Velit officia consequat duis enim velit mollit. Exercitation
+						veniam consequat sunt nostrud amet.
+					</p>
+					<p class="banner-price">$1289</p>
+					<div>
+						<button class="banner-btn">
+							BUY NOW <i class="fa-solid fa-arrow-right btn-arrow"></i>
+						</button>
+					</div>
+				</div>
+				<figure>
+					<img class="banner-img" src="./images/banner-images/tv.png" alt="" />
+				</figure>
+			</div>
 		</header>
 		<!-- main section -->
 		<main></main>
