shoes and bag section add

--- a/index.html
+++ b/index.html
@@ -64,7 +64,157 @@
 			</div>
 		</header>
 		<!-- main section -->
-		<main></main>
+		<main class="container">
+			<!-- categories section -->
+			<section class="categories content-area">
+				<h2 class="categorie-heading">Categories</h2>
+				<div class="categories-card-container">
+					<!-- card 01 -->
+					<div class="categories-card">
+						<h3 class="categories-card-text">Watch</h3>
+						<figure><img src="./images/categories/watch.png" alt="" /></figure>
+					</div>
+					<!-- card 02 -->
+					<div class="categories-card">
+						<h3 class="categories-card-text">Bag</h3>
+						<figure><img src="./images/categories/bag.png" alt="" /></figure>
+					</div>
+					<!-- card 03 -->
+					<div class="categories-card">
+						<h3 class="categories-card-text">Shoes</h3>
+						<figure><img src="./images/categories/shoes.png" alt="" /></figure>
+					</div>
+				</div>
+			</section>
+			<!-- shoes section -->
+			<section class="shoes-section content-area">
+				<div class="heading">
+					<h2 class="categorie-heading">Shoes</h2>
+					<h2 class="see-all">See All</h2>
+				</div>
+				<!-- card  -->
+				<div class="shoes-card">
+					<!-- card 01 -->
+					<div class="card">
+						<figure class="card-img">
+							<img src="./images/shoes/shoe-1.png" alt="" />
+						</figure>
+						<h3 class="card-title">Reebok Dart Men’s Shoes</h3>
+						<p class="card-paragraph">
+							Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+							amet sint.
+						</p>
+						<h4 class="card-price">$1289</h4>
+
+						<div class="btn-card-content">
+							<button class="card-btn">
+								BUY NOW <i class="fa-solid fa-arrow-right btn-arrow"></i>
+							</button>
+						</div>
+					</div>
+					<!-- card 02 -->
+					<div class="card">
+						<figure class="card-img">
+							<img src="./images/shoes/shoe-2.png" alt="" />
+						</figure>
+						<h3 class="card-title">Reebok Pump</h3>
+						<p class="card-paragraph">
+							Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+							amet sint.
+						</p>
+						<h4 class="card-price">$799</h4>
+
+						<div class="btn-card-content">
+							<button class="card-btn">
+								BUY NOW <i class="fa-solid fa-arrow-right btn-arrow"></i>
+							</button>
+						</div>
+					</div>
+					<!-- card 03 -->
+					<div class="card">
+						<figure class="card-img">
+							<img src="./images/shoes/shoe-3.png" alt="" />
+						</figure>
+						<h3 class="card-title">Reebok All Terrain</h3>
+						<p class="card-paragraph">
+							Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+							amet sint.
+						</p>
+						<h4 class="card-price">$699</h4>
+
+						<div class="btn-card-content">
+							<button class="card-btn">
+								BUY NOW <i class="fa-solid fa-arrow-right btn-arrow"></i>
+							</button>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- bag -->
+			<section class="shoes-section content-area">
+				<div class="heading">
+					<h2 class="categorie-heading">Shoes</h2>
+					<h2 class="see-all">See All</h2>
+				</div>
+				<!-- card  -->
+				<div class="shoes-card">
+					<!-- card 01 -->
+					<div class="card">
+						<figure>
+							<img class="bag-img" src="./images/bags/bag-1.png" alt="" />
+						</figure>
+						<h3 class="card-title">Ison Backpack</h3>
+						<p class="card-paragraph">
+							Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+							amet sint.
+						</p>
+						<h4 class="card-price">$1289</h4>
+
+						<div class="btn-card-content">
+							<button class="card-btn">
+								BUY NOW <i class="fa-solid fa-arrow-right btn-arrow"></i>
+							</button>
+						</div>
+					</div>
+					<!-- card 02 -->
+					<div class="card">
+						<figure>
+							<img class="bag-img" src="./images/bags/bag-2.png" alt="" />
+						</figure>
+						<h3 class="card-title">Biaowang Backpack</h3>
+						<p class="card-paragraph">
+							Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+							amet sint.
+						</p>
+						<h4 class="card-price">$859</h4>
+
+						<div class="btn-card-content">
+							<button class="card-btn">
+								BUY NOW <i class="fa-solid fa-arrow-right btn-arrow"></i>
+							</button>
+						</div>
+					</div>
+					<!-- card 03 -->
+					<div class="card">
+						<figure>
+							<img class="bag-img" src="./images/bags/bag-3.png" alt="" />
+						</figure>
+						<h3 class="card-title">Dxyizu WS54 Smart</h3>
+						<p class="card-paragraph">
+							Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+							amet sint.
+						</p>
+						<h4 class="card-price">$935</h4>
+
+						<div class="btn-card-content">
+							<button class="card-btn">
+								BUY NOW <i class="fa-solid fa-arrow-right btn-arrow"></i>
+							</button>
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
 		<!-- footer section -->
 	</body>
 </html>
