footer section add

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 			<!-- bag -->
 			<section class="shoes-section content-area">
 				<div class="heading">
-					<h2 class="categorie-heading">Shoes</h2>
+					<h2 class="categorie-heading">Backpack</h2>
 					<h2 class="see-all">See All</h2>
 				</div>
 				<!-- card  -->
@@ -216,5 +216,17 @@
 			</section>
 		</main>
 		<!-- footer section -->
+		<footer class="container">
+			<div class="footer-section content-area">
+				<div class="footer-content">
+					<h2 class="footer-title">LET'S STAY IN TOUCH</h2>
+					<p class="footer-paragraph">Get updates on sales specials and more</p>
+					<div class="footer-inp-btn">
+						<input type="email" placeholder="Enter your email" />
+						<button>Send</button>
+					</div>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
